Fixed image sizing and font size
Had trouble adjusting image sizes as they were not lining up with the desired layout.

--- a/week_2/content.css
+++ b/week_2/content.css
@@ -19,6 +19,7 @@ font-family: 'Cinzel', serif;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 400%;
 }
 
 .center {
@@ -26,7 +27,6 @@ font-family: 'Cinzel', serif;
     font-family: 'Cinzel', serif;
     text-transform: uppercase;
     font-weight: 900;
-    font-size: 400%;
     text-shadow: 8px 8px 6px rgb(34, 34, 34);
 }
 
@@ -58,9 +58,7 @@ font-family: 'Cinzel', serif;
 /* THESE ARE THE SECTIONS FOR THE DEFAULT (MOBILE) VIEW */
 
 @media(min-width: 550px){
-    .w-md-100 {
-        width: 100%;
-    }
+
 }
     .maxLogo {
     display: none;
