--- a/week_2/navbar.css
+++ b/week_2/navbar.css
@@ -18,6 +18,7 @@ font-family: 'Cinzel', serif;
   background-color: rgb(206, 219, 236);
   text-align: center;
   font-family:'Martel', serif;
+  z-index:1;
   
 }
 
